# fastapi-todo-ref

./: .gitignore  database.py  main.py  models.py  promote.py  pyproject.toml  schemas.py
api/: deps.py  todos.py  users.py  webhook.py
core/: config.py  security.py
services/: auth.py  todo_crud.py  user_crud.py
telegram_bot/: bot.py  handlers.py
