[project]
name = "fastapi-todo-api"
version = "0.1.0"
description = "A state-of-the-art, secure FastAPI Todo API with Telegram Bot integration."
readme = "README.md"
requires-python = ">=3.11"

# These are the exact dependencies we installed during our journey
dependencies = [
    "fastapi[standard]>=0.111.0",
    "sqlalchemy>=2.0.30",
    "pydantic-settings>=2.3.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.1.3",
    "python-telegram-bot>=21.3",
    "email-validator>=2.1.0", # Required for Pydantic's EmailStr
]

[project.optional-dependencies]
# Tools you only need during local development, not in production
dev = [
    "ruff>=0.4.0",       # State-of-the-art linter and formatter
    "pytest>=8.2.0",     # Testing framework
    "httpx>=0.27.0",     # Required for testing FastAPI routes
]

[build-system]
# Hatchling is the modern, official build backend recommended by PyPA
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Tell the builder exactly which folders to package into the deployment
packages = ["api", "core", "services", "telegram_bot"]

# --- Tool Configurations ---

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# E: pycodestyle errors, F: Pyflakes, I: isort (import sorting)
select = ["E", "F", "I"]